@@ -3,6 +3,8 @@
 	- add support for sysfs interface (instead of proc) for battery 
           status (initial code by Santiago Garcia Mantinan)
 	- fix maximized window repositioning on fullscreen toggle
+	- bug 1852567 - make searching for icons more consistent (iconPath first, 
+          search each directory first for all possible types - xpm, png)
 
 1.2.35: 2008-01-05
 	- Application tray bug fixes
